Corrected Swagger
